networkpolicy/networkpolicy__basic_kafka_setup__ingress-apisix__exception__app__egress__ports__9001__nr21__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ingress-apisix--exception--app--egress--ports--9001--nr21
  namespace: ingress-apisix
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: minio
    ports:
    - protocol: TCP
      port: 9001
